k8s/domains/identity/components/ui/infra/base/identity-ui-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: identity-ui-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: identity-ui
  template:
    metadata:
      labels:
        app: identity-ui
    spec:
      terminationGracePeriodSeconds: 15
      automountServiceAccountToken: false

      containers:
        - name: identity-ui
          image: ghcr.io/mstaicu/identity-ui
          ports:
            - containerPort: 3000
              name: http

          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 2

          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 2
