k8s/domains/identity/components/ui/infra/base/identity-ui-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: identity-ui
spec:
  selector:
    app: identity-ui
  ports:
    - name: identity-ui
      port: 3000
      targetPort: 3000
