k8s/domains/identity/components/ui/infra/base/identity-ui-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: identity-ui
spec:
  podSelector:
    matchLabels:
      app: identity-ui
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app: traefik
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app: traefik
      ports:
        - protocol: TCP
          port: 80
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: signoz
          podSelector:
            matchLabels:
              app.kubernetes.io/name: signoz-ingester
      ports:
        - protocol: TCP
          port: 4318
